Setup Hypertuning Metrics and Successfully run hypertuning job

--- a/Capstone.ipynb
+++ b/Capstone.ipynb
@@ -204,15 +204,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from tensorflow.python.training.adam import AdamOptimizer"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 113,
    "metadata": {},
    "outputs": [
@@ -348,122 +339,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Low Level Training Job"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# We will need to know the name of the container that we want to use for training. SageMaker provides\n",
-    "# a nice utility method to construct this for us.\n",
-    "container = get_image_uri(session.boto_region_name, 'xgboost')\n",
-    "\n",
-    "# We now specify the parameters we wish to use for our training job\n",
-    "training_params = {}\n",
-    "\n",
-    "# We need to specify the permissions that this training job will have. For our purposes we can use\n",
-    "# the same permissions that our current SageMaker session has.\n",
-    "training_params['RoleArn'] = role\n",
-    "\n",
-    "# Here we describe the algorithm we wish to use. The most important part is the container which\n",
-    "# contains the training code.\n",
-    "training_params['AlgorithmSpecification'] = {\n",
-    "    \"TrainingImage\": container,\n",
-    "    \"TrainingInputMode\": \"File\"\n",
-    "}\n",
-    "\n",
-    "# We also need to say where we would like the resulting model artifacts stored.\n",
-    "training_params['OutputDataConfig'] = {\n",
-    "    \"S3OutputPath\": \"s3://\" + session.default_bucket() + \"/\" + prefix + \"/output\"\n",
-    "}\n",
-    "\n",
-    "# We also need to set some parameters for the training job itself. Namely we need to describe what sort of\n",
-    "# compute instance we wish to use along with a stopping condition to handle the case that there is\n",
-    "# some sort of error and the training script doesn't terminate.\n",
-    "training_params['ResourceConfig'] = {\n",
-    "    \"InstanceCount\": 1,\n",
-    "    \"InstanceType\": \"ml.m4.xlarge\",\n",
-    "    \"VolumeSizeInGB\": 5\n",
-    "}\n",
-    "    \n",
-    "training_params['StoppingCondition'] = {\n",
-    "    \"MaxRuntimeInSeconds\": 86400\n",
-    "}\n",
-    "\n",
-    "# Next we set the algorithm specific hyperparameters. In this case, since we are setting up\n",
-    "# a training job which will serve as the base training job for the eventual hyperparameter\n",
-    "# tuning job, we only specify the _static_ hyperparameters. That is, the hyperparameters that\n",
-    "# we do _not_ want SageMaker to change.\n",
-    "training_params['StaticHyperParameters'] = {\n",
-    "    \"gamma\": \"4\",\n",
-    "    \"subsample\": \"0.8\",\n",
-    "    \"objective\": \"reg:linear\",\n",
-    "    \"early_stopping_rounds\": \"10\",\n",
-    "    \"num_round\": \"200\"\n",
-    "}\n",
-    "\n",
-    "# Now we need to tell SageMaker where the data should be retrieved from.\n",
-    "training_params['InputDataConfig'] = [\n",
-    "    {\n",
-    "        \"ChannelName\": \"train\",\n",
-    "        \"DataSource\": {\n",
-    "            \"S3DataSource\": {\n",
-    "                \"S3DataType\": \"S3Prefix\",\n",
-    "                \"S3Uri\": train_location,\n",
-    "                \"S3DataDistributionType\": \"FullyReplicated\"\n",
-    "            }\n",
-    "        },\n",
-    "        \"ContentType\": \"csv\",\n",
-    "        \"CompressionType\": \"None\"\n",
-    "    },\n",
-    "    {\n",
-    "        \"ChannelName\": \"validation\",\n",
-    "        \"DataSource\": {\n",
-    "            \"S3DataSource\": {\n",
-    "                \"S3DataType\": \"S3Prefix\",\n",
-    "                \"S3Uri\": val_location,\n",
-    "                \"S3DataDistributionType\": \"FullyReplicated\"\n",
-    "            }\n",
-    "        },\n",
-    "        \"ContentType\": \"csv\",\n",
-    "        \"CompressionType\": \"None\"\n",
-    "    }\n",
-    "]\n",
-    "\n",
-    "\n",
-    "=[\n",
-    "    {\n",
-    "        \"Name\": \"loss\",\n",
-    "        \"Regex\": \"Loss = (.*?);\",\n",
-    "    },\n",
-    "    {\n",
-    "        \"Name\": \"ganloss\",\n",
-    "        \"Regex\": \"GAN_loss=(.*?);\",\n",
-    "    },    \n",
-    "    {\n",
-    "        \"Name\": \"discloss\",\n",
-    "        \"Regex\": \"disc_train_loss=(.*?);\",\n",
-    "    },    \n",
-    "    {\n",
-    "        \"Name\": \"disc-combined\",\n",
-    "        \"Regex\": \"disc-combined=(.*?);\",\n",
-    "    },    \n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Hypertuning "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,19 +354,24 @@
     "tf_hyperparameter_tuner = HyperparameterTuner(estimator = estimator, # The estimator object to use as the basis for the training jobs.\n",
     "                                               objective_metric_name = 'Validation_loss', # The metric used to compare trained models.\n",
     "                                               objective_type = 'Minimize', # Whether we wish to minimize or maximize the metric.\n",
+    "                                               metric_definitions = [{'Name': 'Validation_loss', \n",
+    "                                                                      'Regex': 'Validation_loss:(.*?);'},\n",
+    "                                                                     {'Name': 'Validation_accuracy', \n",
+    "                                                                      'Regex': 'Validation_accuracy:(.*?);'}\n",
+    "                                                                    ],\n",
     "                                               max_jobs = 6, # The total number of models to train\n",
     "                                               max_parallel_jobs = 3, # The number of models to train in parallel\n",
     "                                               hyperparameter_ranges = {\n",
     "                                                    'epochs': IntegerParameter(50, 300),\n",
     "                                                    'dropout': ContinuousParameter(0.05, 0.5),\n",
-    "                                                    'embeding_size': IntegerParameter(10, 200),\n",
+    "                                                    'embedding_size': IntegerParameter(10, 200),\n",
     "                                                    'lstm_size': IntegerParameter(10, 200)\n",
     "                                               })\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -502,45 +388,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
-    "s3_input_train = sagemaker.s3_input(s3_data='{}/train.csv'.format(input_data), content_type='csv')\n",
-    "s3_input_validation = sagemaker.s3_input(s3_data='{}/test.csv'.format(input_data), content_type='csv')"
+    "# s3_input_train = sagemaker.s3_input(s3_data='{}/train.csv'.format(input_data), content_type='csv')\n",
+    "# s3_input_validation = sagemaker.s3_input(s3_data='{}/test.csv'.format(input_data), content_type='csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tf_hyperparameter_tuner.fit({'train': s3_input_train, 'validation': s3_input_validation})\n",
+    "tf_hyperparameter_tuner.fit(input_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ClientError",
-     "evalue": "An error occurred (ValidationException) when calling the CreateHyperParameterTuningJob operation: A metric is required for this hyperparameter tuning job objective. Provide a metric in the metric definitions.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mClientError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-112-fbe49eeed7f7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtf_hyperparameter_tuner\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m'train'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0ms3_input_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'validation'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0ms3_input_validation\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages/sagemaker/tuner.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, inputs, job_name, include_cls_metadata, **kwargs)\u001b[0m\n\u001b[1;32m    278\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    279\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_prepare_for_training\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjob_name\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mjob_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minclude_cls_metadata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minclude_cls_metadata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 280\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlatest_tuning_job\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_TuningJob\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstart_new\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    281\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    282\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0mclassmethod\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages/sagemaker/tuner.py\u001b[0m in \u001b[0;36mstart_new\u001b[0;34m(cls, tuner, inputs)\u001b[0m\n\u001b[1;32m    658\u001b[0m             \u001b[0mtuner\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mestimator\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mencrypt_inter_container_traffic\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    659\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 660\u001b[0;31m         \u001b[0mtuner\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mestimator\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msagemaker_session\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtune\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mtuner_args\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    661\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    662\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mcls\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtuner\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msagemaker_session\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtuner\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_current_job_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages/sagemaker/session.py\u001b[0m in \u001b[0;36mtune\u001b[0;34m(self, job_name, strategy, objective_type, objective_metric_name, max_jobs, max_parallel_jobs, parameter_ranges, static_hyperparameters, input_mode, metric_definitions, role, input_config, output_config, resource_config, stop_condition, tags, warm_start_config, enable_network_isolation, image, algorithm_arn, early_stopping_type, encrypt_inter_container_traffic, vpc_config)\u001b[0m\n\u001b[1;32m    472\u001b[0m         \u001b[0mLOGGER\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Creating hyperparameter tuning job with name: {}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjob_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    473\u001b[0m         \u001b[0mLOGGER\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdebug\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'tune request: {}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdumps\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtune_request\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindent\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 474\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msagemaker_client\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate_hyper_parameter_tuning_job\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mtune_request\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    475\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    476\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mstop_tuning_job\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages/botocore/client.py\u001b[0m in \u001b[0;36m_api_call\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    355\u001b[0m                     \"%s() only accepts keyword arguments.\" % py_operation_name)\n\u001b[1;32m    356\u001b[0m             \u001b[0;31m# The \"self\" in this scope is referring to the BaseClient.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 357\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_make_api_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moperation_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    358\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    359\u001b[0m         \u001b[0m_api_call\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__name__\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpy_operation_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages/botocore/client.py\u001b[0m in \u001b[0;36m_make_api_call\u001b[0;34m(self, operation_name, api_params)\u001b[0m\n\u001b[1;32m    659\u001b[0m             \u001b[0merror_code\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mparsed_response\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Error\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Code\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    660\u001b[0m             \u001b[0merror_class\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexceptions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrom_code\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0merror_code\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 661\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0merror_class\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparsed_response\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moperation_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    662\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    663\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mparsed_response\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mClientError\u001b[0m: An error occurred (ValidationException) when calling the CreateHyperParameterTuningJob operation: A metric is required for this hyperparameter tuning job objective. Provide a metric in the metric definitions."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".......................................................................................................................!\n"
      ]
     }
    ],
-   "source": [
-    "tf_hyperparameter_tuner.fit({'train': s3_input_train, 'validation': s3_input_validation})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "tf_hyperparameter_tuner.wait()"
    ]
