Add data analysis and visualization sections

--- a/Capstone 1 SEB.ipynb
+++ b/Capstone 1 SEB.ipynb
@@ -152,6 +152,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Analyzing Source Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_data = pd.read_csv(os.path.join(data_dir, \"raw_data.csv\"), dtype={'answer':str, 'question':str, 'reference_answer':str})\n",
+    "train_data = pd.read_csv(os.path.join(data_dir, \"train.csv\"), header=None, names=None)\n",
+    "test_data = pd.read_csv(os.path.join(data_dir, \"test.csv\"), header=None, names=None)\n",
+    "vocab = pd.read_csv(os.path.join(data_dir, \"vocab.csv\"), header=None, names=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_data['answer_length'] = raw_data['answer'].apply(lambda x: len(x))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Training Basic Model"
    ]
   },
