--- a/Capstone 1 SEB.ipynb
+++ b/Capstone 1 SEB.ipynb
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -661,20 +661,20 @@
    ],
    "source": [
     "# Reload an existing trained estimator\n",
-    "training_job_name = tf_hyperparameter_tuner.best_training_job()\n",
+    "training_job_name = 'sagemaker-tensorflow-190625-2206-006-877d978f'\n",
     "estimator = TensorFlow.attach(training_job_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--------------------------------------------------------------------------------------------------!"
+      "--------------------------------------------------------------------------------------!"
      ]
     }
    ],
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,10 +713,10 @@
     "    # rounding and squeezing array\n",
     "    test_preds = np.squeeze(predictor.predict(test_features)['predictions'])\n",
     "    # Normalized to range 0 to 1\n",
-    "    min_red = test_y_preds.min()\n",
-    "    max_pred = test_y_preds.max()\n",
-    "    test_y_preds = (test_y_preds - min_pred) / (max_pred - min_pred)\n",
-    "    test_preds = np.round(test_preds)    \n",
+    "    min_pred = test_preds.min()\n",
+    "    max_pred = test_preds.max()\n",
+    "    test_y_preds = (test_preds - min_pred) / (max_pred - min_pred)\n",
+    "    test_preds = np.round(test_y_preds)    \n",
     "    # calculate true positives, false positives, true negatives, false negatives\n",
     "    tp = np.logical_and(test_labels, test_preds).sum()\n",
     "    fp = np.logical_and(1-test_labels, test_preds).sum()\n",
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,24 +752,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 4.10960932e-03 -6.35614264e-03  4.46019164e-03 -1.69594516e-02\n",
-      "  8.16530986e-01  4.69173840e-01  4.80202937e-03  5.49756554e-03\n",
-      " -2.61269622e-01  8.24399174e-03  8.47077669e-01  7.94946052e-03\n",
-      " -1.51907646e-02  4.63883263e-01  9.80572975e-01  9.77340007e-01\n",
-      "  9.80397694e-01  9.80134772e-01  1.07523468e-01 -6.77400382e-03\n",
-      "  5.53131695e-02 -1.25312585e-01  1.00000000e+00  4.77586375e-03\n",
-      "  1.68725899e-01  5.86324154e-02  7.74893857e-01  6.41065516e-01\n",
-      "  1.00313559e-02  9.62643633e-01  4.65057648e-03  1.67205819e-02\n",
-      "  9.95199237e-01  1.02664278e-02  1.36930822e-03  4.46518716e-03\n",
-      "  5.48881120e-03  4.36334865e-03 -1.99875355e-03  1.39826861e-02\n",
-      "  2.75562848e-02  2.72994001e-04  8.65174502e-02]\n"
+      "[0.21040642 0.20210863 0.21068438 0.19370178 0.85453625 0.57913348\n",
+      " 0.21095541 0.21150687 0.         0.21368438 0.87875524 0.21345086\n",
+      " 0.19510409 0.57493883 0.98459725 0.98203398 0.98445827 0.98424982\n",
+      " 0.2923983  0.20177733 0.25100326 0.10779379 1.         0.21093467\n",
+      " 0.34092276 0.25363493 0.82152417 0.71541812 0.21510149 0.97038193\n",
+      " 0.21083533 0.22040506 0.99619371 0.21528787 0.20823377 0.21068834\n",
+      " 0.21149993 0.2106076  0.2055634  0.21823431 0.22899617 0.20736456\n",
+      " 0.27574364]\n"
      ]
     }
    ],
@@ -777,7 +774,7 @@
     "# First: generate predicted, class labels\n",
     "test_y_preds = np.squeeze(predictor.predict(test_x)['predictions'])\n",
     "#normalize to 0 - 1\n",
-    "min_red = test_y_preds.min()\n",
+    "min_pred = test_y_preds.min()\n",
     "max_pred = test_y_preds.max()\n",
     "test_y_preds = (test_y_preds - min_pred) / (max_pred - min_pred)\n",
     "print(test_y_preds)    "
@@ -785,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -794,24 +791,24 @@
      "text": [
       "predictions  0.0  1.0\n",
       "actuals              \n",
-      "0.0           24    2\n",
-      "1.0            8    9\n",
+      "0.0           23    3\n",
+      "1.0            7   10\n",
       "\n",
-      "Recall:     0.529\n",
-      "Precision:  0.818\n",
+      "Recall:     0.588\n",
+      "Precision:  0.769\n",
       "Accuracy:   0.767\n",
       "\n",
       "    raw_predicted  predicted  actual\n",
-      "1       -0.006356       -0.0     1.0\n",
-      "5        0.469174        0.0     1.0\n",
-      "8       -0.261270       -0.0     1.0\n",
-      "15       0.977340        1.0     0.0\n",
-      "17       0.980135        1.0     0.0\n",
-      "19      -0.006774       -0.0     1.0\n",
-      "21      -0.125313       -0.0     1.0\n",
-      "24       0.168726        0.0     1.0\n",
-      "38      -0.001999       -0.0     1.0\n",
-      "41       0.000273        0.0     1.0\n"
+      "1        0.202109        0.0     1.0\n",
+      "8        0.000000        0.0     1.0\n",
+      "13       0.574939        1.0     0.0\n",
+      "15       0.982034        1.0     0.0\n",
+      "17       0.984250        1.0     0.0\n",
+      "19       0.201777        0.0     1.0\n",
+      "21       0.107794        0.0     1.0\n",
+      "24       0.340923        0.0     1.0\n",
+      "38       0.205563        0.0     1.0\n",
+      "41       0.207365        0.0     1.0\n"
      ]
     }
    ],
@@ -829,9 +826,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "conda_tensorflow_p36",
    "language": "python",
-   "name": "python3"
+   "name": "conda_tensorflow_p36"
   },
   "language_info": {
    "codemirror_mode": {
@@ -843,7 +840,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
